Removed vim-latex pointer

--- a/ESL-Chap3Solutions.tex
+++ b/ESL-Chap3Solutions.tex
@@ -249,7 +249,7 @@ p <- p + scale_color_brewer(name="Legend",
     Finally, we calculate $\text{span}(u_1, \dots, u_p)$.  We have that $U$ is a unitary $N \times p$ matrix, and thus the columns of $U$ span the column space of $\tilde X$, and thus the span of $Q_2$ is equal to the span of $U$.  
 
     TODO: When is $Q_2$ equal to $U$ up to parity?  Is it where columns of 
-\end{proof}<++>
+\end{proof}
 \begin{exer}[Forward stepwise regression]
     Suppose that we have the $QR$ decomposition for the $N \times q$ matrix $X_1$ in a multiple regression problem with response $y$, and we have an additional $p - q$ predictors in matrix $X_2$.  Denote the current residual by $r$.  We wish to establish which one of these additional variables will reduce the residual-sum-of-squares the most when included with those in $X_1$.  Describe an efficient procedure for doing this.
 \end{exer}
