Added Chapter 4 partial solutions

--- a/ESL-Solutions.tex
+++ b/ESL-Solutions.tex
@@ -63,7 +63,9 @@ tabsize=2
 \tableofcontents
 
 \setcounter{chapter}{1}
+
 \include{ESL-Chap2Solutions}
 \include{ESL-Chap3Solutions}
+\include{ESL-Chap4Solutions}
 
 \end{document}
