Using ProjectTemplate for the RCode

--- a/ESL-Solutions.tex
+++ b/ESL-Solutions.tex
@@ -67,5 +67,8 @@ tabsize=2
 \include{ESL-Chap2Solutions}
 \include{ESL-Chap3Solutions}
 \include{ESL-Chap4Solutions}
+\include{ESL-Chap5Solutions}
 
+\setcounter{chapter}{12}
+\include{ESL-Chap12Solutions}
 \end{document}
