Renamed director, added exercise 3.17

--- a/ESL-Chap5Solutions.tex
+++ b/ESL-Chap5Solutions.tex
@@ -1,5 +1,20 @@
-%%latex
 \chapter{Basis Expansions and Regularization}
 
+\begin{exer}
+    Show that the truncated power basis functions in (5.3) represent a basis for a cubic spline with the two knots as indicated.
+\end{exer}
 
+\begin{exer}
+Suppose that $B_{i, M}(x)$ is an order-$M$ $B$-spline.  
+    \begin{enumerate}
+        \item Show by induction that $B_{i, M}(x) = 0$ for $x \notin [\tau _i, \tau_{i+M}$.  This shows, for example, that the support of cubic $B$-splines is at most $5$ knots.
+        \item Show by induction that $B_{i, M}(x) > 0$ for $x \in (\tau_i, \tau_{i + M }$.  The $B$-splines are positive in the interior of their support. 
+        \item Show by induction that $\sum_{i=1}^{K+M} B_{i, M}(x) = 1$ for all $x \in [\xi_0, \xi_{K+1}]$.
+        \item Show that 
 
+    \end{enumerate}
+\end{exer}
+
+\begin{exer}
+        
+\end{exer}
